<resources>
    <string name="app_name">GoNPark</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="fpass">Forget Password</string>
    <string name="username">UserName</string>
    <string name="info"><u>Your Info</u></string>
    <string name="haveaccount">Dont have account? <b><u>Create new account</u></b></string>
    <string name="bsignin">Back to <b><u>SignIn</u></b></string>
    <string name="predicted"><u>Predicted availability</u></string>
    <string name="date"><u>Time and date info</u></string>
    <string name="slotinfo"><u>Parking slot info</u></string>
    <string name="confirms"><u>Please scan QR code</u></string>
    <string name="confirmt"><u>Note, please give this qr code
to security man when you arrive
to confirm check in and check out
time before count down ends</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello">Hello World, DatumDroidOCRActivity!</string>
    <string name="button_text">OCR!</string>
    <string name="text_hint">OCRed Text will appear here</string>
<string name="url">http://192.168.156.207:8000/api</string>
</resources>