<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/dark_blue"
    tools:context=".ForgetActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fpass"
        android:textColor="@color/white"
        android:textSize="40dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        />
    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/defaultround"
        android:orientation="vertical"
        >
        <EditText
            android:id="@+id/email"
            android:background="@drawable/roundborder"
            android:layout_width="300dp"
            android:hint="@string/email"
            android:textSize="25dp"
            android:textColor="@color/dark_blue"
            android:textAlignment="center"
            android:layout_height="60dp"
            android:layout_marginTop="150dp"
            android:layout_gravity="center"
            />

        <TextView
            android:id="@+id/signin"
            android:clickable="true"
            android:textAlignment="center"
            android:layout_width="200dp"
            android:layout_height="65dp"
            android:paddingTop="15dp"
            android:onClick="forget"
            android:text="Send Email"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:backgroundTint="@color/pink"
            android:layout_marginTop="60dp"
            android:layout_gravity="center"
            android:background="@drawable/roundborder"/>
        <TextView
            android:clickable="true"
            android:onClick="signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bsignin"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:textSize="18dp"
            />
    </LinearLayout>
</LinearLayout>