<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ConfirmActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_blue"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="Confirm Registration"
            android:textColor="@color/white"
            android:textSize="35dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:background="@drawable/defaultround"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/info"
                android:textColor="@color/dark_blue"
                android:textSize="25dp" />

            <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="50dp"
                android:background="@color/darkgray"
                android:shrinkColumns="*"
                android:stretchColumns="1">

                <TableRow>

                    <TextView
android:textColor="@color/dark_blue"
                        android:padding="10dip"
                        android:text="UserName:"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/name"
                        android:padding="10dip"
                        android:text="" />
                </TableRow>

                <View
                    android:layout_width="10dp"
                    android:layout_height="3dp"
                    android:background="@android:color/white" />

                <TableRow>

                    <TextView
                        android:textColor="@color/dark_blue"
                        android:padding="10dip"
                        android:text="CarNumber:"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/carnum"
                        android:padding="10dip"
                        android:text="" />
                </TableRow>
            </TableLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/slotinfo"
                android:textColor="@color/dark_blue"
                android:textSize="25dp" />

            <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="50dp"
                android:background="@color/darkgray"
                android:shrinkColumns="*"
                android:stretchColumns="1">

                <TableRow>

                    <TextView
                        android:textColor="@color/dark_blue"
                        android:padding="10dip"
                        android:text="SlotName:"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/slot"
                        android:padding="10dip"
                        android:text="" />
                </TableRow>

                <View
                    android:layout_width="10dp"
                    android:layout_height="3dp"
                    android:background="@android:color/white" />

                <TableRow>

                    <TextView
                        android:textColor="@color/dark_blue"
                        android:padding="10dip"
                        android:text="ParkingName:"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/position"
                        android:padding="10dip"
                        android:text="" />
                </TableRow>
            </TableLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/date"
                android:textColor="@color/dark_blue"
                android:textSize="25dp" />

            <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="50dp"
                android:background="@color/darkgray"
                android:shrinkColumns="*"
                android:stretchColumns="1">

                <TableRow>

                    <TextView
                        android:textColor="@color/dark_blue"
                        android:padding="10dip"
                        android:text="Time:"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/time"
                        android:padding="10dip"
                        android:text="" />
                </TableRow>

                <View
                    android:layout_width="10dp"
                    android:layout_height="3dp"
                    android:background="@android:color/white" />

                <TableRow>

                    <TextView
                        android:textColor="@color/dark_blue"
                        android:padding="10dip"
                        android:text="Date:"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/date"
                        android:padding="10dip"
                        android:text="" />
                </TableRow>
            </TableLayout>

            <TextView
                android:id="@+id/confirm"
                android:clickable="true"
                android:onClick="confirm"
                android:textAlignment="center"
                android:layout_width="200dp"
                android:layout_height="65dp"
                android:paddingTop="10dp"
                android:text="Confirm"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:backgroundTint="@color/pink"
                android:layout_marginTop="80dp"
                android:layout_gravity="center"
                android:background="@drawable/roundborder"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>