<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_blue"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="Sign Up"
            android:textColor="@color/white"
            android:textSize="40dp" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/circleshape"
                android:backgroundTint="@color/pink" />

            <View
                android:layout_width="130dp"
                android:layout_height="3dp"
                android:layout_marginTop="15dp"
                android:background="@android:color/white" />

            <TextView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/circleshape"
                android:backgroundTint="@color/white" />

            <View
                android:layout_width="130dp"
                android:layout_height="3dp"
                android:layout_marginTop="15dp"
                android:background="@android:color/white" />

            <TextView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/circleshape"
                android:backgroundTint="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Personal info"
                android:textColor="@color/white" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:text="Car info"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="110dp"
                android:text="Finish"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="80dp"
            android:background="@drawable/defaultround"
            android:orientation="vertical">

            <EditText
                android:id="@+id/username"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="80dp"
                android:background="@drawable/roundborder"
                android:hint="@string/username"
                android:textAlignment="center"
                android:textColor="@color/dark_blue"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/roundborder"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textAlignment="center"
                android:textColor="@color/dark_blue"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/roundborder"
                android:hint="phone"
                android:inputType="phone"
                android:textAlignment="center"
                android:textColor="@color/dark_blue"
                android:textSize="20dp" />

            <EditText

                android:id="@+id/nid"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/roundborder"
                android:hint="National ID"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="@color/dark_blue"
                android:textSize="20dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Gender"
                    android:textColor="@color/dark_blue"
                    android:textSize="18dp" />

                <RadioGroup
                    android:id="@+id/radioSex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:checked="true"
                        android:padding="5dp"
                        android:text="Male"
                        android:textColor="@color/dark_blue" />

                    <RadioButton
                        android:id="@+id/radioFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="Female"
                        android:textColor="@color/dark_blue" />

                </RadioGroup>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"

                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="Birth Date"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Button
                    android:id="@+id/button1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:onClick="setDate"
                    android:text="select date" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:visibility="gone" />

            <EditText
                android:id="@+id/address"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/roundborder"
                android:hint="Address"
                android:textAlignment="center"
                android:textColor="@color/dark_blue"
                android:textSize="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:orientation="horizontal">


                <EditText

                    android:id="@+id/password"
                    android:layout_width="300dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:background="@drawable/roundborder"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textAlignment="center"
                    android:textColor="@color/dark_blue"
                    android:textSize="20dp" />


                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="30dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="-50dp"
                    android:layout_marginTop="5dp"
                    android:visibility="gone"
                    app:srcCompat="@drawable/hidepass" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="30dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="-50dp"
                    android:layout_marginTop="5dp"
                    android:visibility="visible"
                    app:srcCompat="@drawable/showpass" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/pattern"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:visibility="gone"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content">

            <TextView

                android:id="@+id/atoz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="*Must include lowercase "

                android:textColor="@color/darkgray"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/AtoZ"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="*Must include uppercase "

                android:textColor="@color/darkgray"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="*Must include numbers "
                android:textColor="@color/darkgray"
                android:textSize="20dp" />
                <TextView
                    android:id="@+id/charcount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="*Must include 8 characters "
                    android:textColor="@color/darkgray"
                    android:textSize="20dp" />

            </LinearLayout>
            <EditText

                android:id="@+id/cpassword"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/roundborder"
                android:hint="Confirm Password"

                android:textAlignment="center"
                android:textColor="@color/dark_blue"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/next"
                android:layout_width="200dp"
                android:layout_height="65dp"
                android:layout_gravity="center"
                android:layout_marginTop="80dp"
                android:background="@drawable/roundborder"
                android:backgroundTint="@color/pink"
                android:clickable="true"
android:onClick="check"
                android:paddingTop="10dp"
                android:text="Next"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>